--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -91,7 +91,7 @@
             (click)="addItemToCart(detailData._id)"
             class="px-4 py-3 w-[45%] border border-green-600 bg-green-600 duration-500 hover:bg-green-700 text-white max-sm:text-sm font-semibold"
           >
-            Add to cart
+            <i class="fa-solid fa-cart-shopping"></i> Add to cart
           </button>
 
           <div class="flex flex-wrap text-center">
