--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,5 +1,5 @@
 <section
-  class="border relative my-10 px-10 border-green-500 rounded-md max-sm:w-11/12 sm:w-6/12 dark:bg-gray-900 bg-gray-100 shadow-sm shadow-green-600 mx-auto"
+  class="border relative my-10 sm:px-10 border-green-500 rounded-md max-sm:w-11/12 sm:w-6/12 dark:bg-gray-900 bg-gray-100 shadow-sm shadow-green-600 mx-auto"
 >
   <div
     [class.hidden]="isload"
