--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -356,7 +356,7 @@
         (click)="addToCart(prod._id)"
         class="py-3 bg-green-800 text-white block w-[90%] mx-auto rounded"
       >
-        Add To Cart
+        <i class="fa-solid fa-cart-shopping"></i> Add To Cart
       </button>
     </div>
     }
