--- a/src/app/Layouts/footer/footer.component.html
+++ b/src/app/Layouts/footer/footer.component.html
@@ -1,38 +1,49 @@
-<footer class="bg-zinc-100 py-6 mt-2  dark:bg-slate-900 dark:text-white   ">
-    <div class="container w-[95%] mx-auto">
-        <h2 class="mb-3 font-light text-4xl ">Get The Fresh Cart App</h2>
-        <p class="font-light text-l text-gray-500 small">
-            We Will Send You a Link, Open it on Your Phone to download the app
-        </p>
+<footer
+  class="bg-zinc-100 py-6 mt-2 z-0 static dark:bg-slate-900 dark:text-white"
+>
+  <div class="container w-[95%] mx-auto">
+    <h2 class="mb-3 font-light text-4xl">Get The Fresh Cart App</h2>
+    <p class="font-light text-l text-gray-500 small">
+      We Will Send You a Link, Open it on Your Phone to download the app
+    </p>
 
-        <!-- inputs design  -->
-        <div class="flex align-center items-center justify-between gap-3    my-3 ">
-            <input type="text" class=" rounded-lg w-full my-3  border-green-500  focus:border-green-700  "
-                placeholder="Email" />
-            <button class="btn-main  w-fit">ShareAppLink</button>
-        </div>
-
-        <hr />
-
-        <!-- footer payment Details Design  -->
-        <div class="pay-details  flex max-md:flex-col    justify-between items-center mt-3   ">
-            <div class="flex  max-lg:flex-col   items-center gap-2 ">
-                <h3 class="text-xl font-bold my-2">Payment partners</h3>
-                <div class="w-[100%] flex justify-between">
-                    <img class="w-[60px]" src="/images/amazon-pay.png" alt="" />
-                    <img class="w-[60px]" src="/images/American-Express-Color.png" alt="" />
-                    <img class="w-[60px]" src="/images/paypal.png" alt="" />
-                    <img class="w-[60px]" src="/images/mastercard.webp" alt="" />
-                </div>
-            </div>
-
-            <div class="flex  max-lg:flex-col items-center gap-2">
-                <h3 class="font-bold  text-xl my-2">Get Deliveries with FreshCart</h3>
-                <div class="flex">
-                    <img src="/images/get-google-play.png" width="100px" alt="" />
-                    <img src="/images/get-apple-store.png" width="100px" alt="" />
-                </div>
-            </div>
-        </div>
+    <!-- inputs design  -->
+    <div class="flex align-center items-center justify-between gap-3 my-3">
+      <input
+        type="text"
+        class="rounded-lg w-full my-3 border-green-500 focus:border-green-700"
+        placeholder="Email"
+      />
+      <button class="btn-main w-fit">ShareAppLink</button>
     </div>
+
+    <hr />
+
+    <!-- footer payment Details Design  -->
+    <div
+      class="pay-details flex max-md:flex-col justify-between items-center mt-3"
+    >
+      <div class="flex max-lg:flex-col items-center gap-2">
+        <h3 class="text-xl font-bold my-2">Payment partners</h3>
+        <div class="w-[100%] flex justify-between">
+          <img class="w-[60px]" src="/images/amazon-pay.png" alt="" />
+          <img
+            class="w-[60px]"
+            src="/images/American-Express-Color.png"
+            alt=""
+          />
+          <img class="w-[60px]" src="/images/paypal.png" alt="" />
+          <img class="w-[60px]" src="/images/mastercard.webp" alt="" />
+        </div>
+      </div>
+
+      <div class="flex max-lg:flex-col items-center gap-2">
+        <h3 class="font-bold text-xl my-2">Get Deliveries with FreshCart</h3>
+        <div class="flex">
+          <img src="/images/get-google-play.png" width="100px" alt="" />
+          <img src="/images/get-apple-store.png" width="100px" alt="" />
+        </div>
+      </div>
+    </div>
+  </div>
 </footer>
