--- a/src/app/pages/all-order/all-order.component.html
+++ b/src/app/pages/all-order/all-order.component.html
@@ -1,5 +1,5 @@
 @if(allOrderData){
-<div class="my-5 py-2">
+<div class="my-1 md:mt-16 lg:my-2 py-2">
   <div class="" id="accordion-collapse" data-accordion="collapse">
     <h2 id="accordion-collapse-heading-1">
       <button
