--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,5 +1,5 @@
 <section
-  class="border max-sm:mt-2 my-1 sm:px-10 rounded-md sm:w-6/12 dark:bg-gray-900 border-green-500 bg-gray-100 shadow-sm mx-auto"
+  class="border max-sm:mt-2 my-1 max-sm:px-5 px-10 rounded-md sm:w-6/12 dark:bg-gray-900 border-green-500 bg-gray-100 shadow-sm mx-auto"
 >
   @let nameControl= registerForm.get('name'); @let emailControl=
   registerForm.get('email'); @let passwordControl= registerForm.get('password');
