--- a/src/app/shared/components/homeSlider/home-slider/home-slider.component.html
+++ b/src/app/shared/components/homeSlider/home-slider/home-slider.component.html
@@ -1,4 +1,6 @@
-<div class="flex mb-3 justify-center flex-wrap items-stretch">
+<div
+  class="flex mt-0 md:mt-24 lg:mt-0 mb-3 justify-center flex-wrap items-stretch"
+>
   <div class="max-lg:w-[100%] h-[100%] lg:w-[79%]">
     <owl-carousel-o [options]="customOptions">
       @for (img of slides; track $index) {
