--- a/src/app/pages/brands/brands.component.html
+++ b/src/app/pages/brands/brands.component.html
@@ -1,6 +1,6 @@
 @if(brandData){
 <div class="relative">
-  <div class="mt-5 border-gray-950 border-y-2 py-2">
+  <div class="mt-2 md:mt-20 lg:mt-5 border-gray-950 border-y-2 py-2">
     <owl-carousel-o class="" [options]="customOptions">
       @for (brand of brandData; track $index) {
       <ng-template carouselSlide>
@@ -52,11 +52,10 @@
 @if (selectedBrand &&showModal) {
 
 <div
-  (click)="closeModal()"
   class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-50"
 >
   <div
-    class="relative top-7 z-[51] md:w-1/2 p-6 dark:bg-slate-800 bg-white rounded-lg shadow-lg"
+    class="relative top-7 z-[51] w-full mx-3 lg:w-1/2 p-6 dark:bg-slate-800 bg-slate-50 border-green-500 border-2 rounded-lg shadow-lg"
   >
     <!-- Close Button -->
     <button
@@ -70,18 +69,18 @@
     <img
       [src]="selectedBrand?.image"
       alt=""
-      class="object-contain w-full h-[200px] rounded-md p-5"
+      class="object-contain w-3/4 mx-auto h-[200px] border-green-500 border-2 rounded-md p-5"
     />
 
     <!-- Brand Name -->
-    <h2 class="mt-4 text-2xl font-bold text-center text-green-600">
+    <h2 class="mt-4 text-3xl font-bold font-serif text-center text-green-600">
       {{ selectedBrand?.name }}
     </h2>
 
     <!-- Close Button -->
     <button
       (click)="closeModal()"
-      class="ms-[34%] w-1/3 py-2 mt-4 text-white transition bg-gray-500 rounded-lg hover:bg-gray-600"
+      class="ms-[34%] w-1/3 py-2 mt-4 text-white transition bg-gray-500 rounded-lg hover:bg-red-600"
     >
       Close
     </button>
