--- a/src/app/pages/homelogin/homelogin/homelogin.component.html
+++ b/src/app/pages/homelogin/homelogin/homelogin.component.html
@@ -1,131 +1,146 @@
-<section class=" dark:bg-slate-800 dark:text-white   relative">
-    <div>
-        <app-home-slider></app-home-slider>
+<section class="dark:bg-slate-800 dark:text-white relative">
+  <div>
+    <app-home-slider></app-home-slider>
 
-
-        <h1 class="text-4xl  font-semibold capitalize py-3 text-center  text-green-800 font-serif  ">
-            Main
-            Categories
-        </h1>
-        <owl-carousel-o [options]=" customOptions">
-
-
-            @for (cat of categoryData; track $index) {
-            <ng-template carouselSlide>
-                <div (click)="getloginMessage('to See Categories product ') " class="cursor-pointer    border">
-                    <img [src]="cat.image" class="h-[245px]" [alt]="cat.slug">
-                    <p class="text-center font-serif pt-1 text-green-500"> {{cat.name}} </p>
-                </div>
-
-            </ng-template>
-            }
-
-        </owl-carousel-o>
-    </div>
-
-    <h1 class="text-4xl  dark:bg-slate-800  font-semibold capitalize py-3 text-center  text-green-800 font-serif">
-        Popular products
+    <h1
+      class="text-4xl font-semibold capitalize py-3 text-center text-green-800 font-serif"
+    >
+      Main Categories
     </h1>
-
-    <div class="flex justify-center items-center  dark:bg-slate-800 dark:text-white  my-1">
-
-        <label for="default-search"
-            class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white">Search</label>
-        <div class="relative mb-3 max-sm:w-[90%] md:w-1/2 mx-auto">
-            <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
-                <svg class="w-4 h-4 text-green-500 dark:text-green-400" aria-hidden="true"
-                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
-                </svg>
-            </div>
-            <input type="search" [(ngModel)]="searchWord"
-                class=" w-[100%] p-2 ps-10 text-sm text-green-900 border border-green-300 rounded-lg  focus:ring-green-500 focus:border-green-500 dark:bg-green-700 dark:border-green-600 dark:placeholder-green-400 dark:text-white dark:focus:ring-green-500 dark:focus:border-green-500"
-                placeholder="Search Product..." />
+    <owl-carousel-o [options]="customOptions">
+      @for (cat of categoryData; track $index) {
+      <ng-template carouselSlide>
+        <div
+          (click)="getloginMessage('to See Categories product ')"
+          class="cursor-pointer border"
+        >
+          <img [src]="cat.image" class="h-[245px]" [alt]="cat.slug" />
+          <p class="text-center font-serif pt-1 text-green-500">
+            {{ cat.name }}
+          </p>
         </div>
+      </ng-template>
+      }
+    </owl-carousel-o>
+  </div>
+
+  <h1
+    class="text-4xl dark:bg-slate-800 font-semibold capitalize py-3 text-center text-green-800 font-serif"
+  >
+    Popular products
+  </h1>
+
+  <div
+    class="flex justify-center items-center dark:bg-slate-800 dark:text-white my-1"
+  >
+    <label
+      for="default-search"
+      class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white"
+      >Search</label
+    >
+    <div class="relative mb-3 max-sm:w-[90%] md:w-1/2 mx-auto">
+      <div
+        class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none"
+      >
+        <svg
+          class="w-4 h-4 text-green-500 dark:text-green-400"
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 20 20"
+        >
+          <path
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"
+          />
+        </svg>
+      </div>
+      <input
+        type="search"
+        [(ngModel)]="searchWord"
+        class="w-[100%] p-2 ps-10 text-sm text-green-900 border border-green-300 rounded-lg focus:ring-green-500 focus:border-green-500 dark:bg-green-700 dark:border-green-600 dark:placeholder-green-400 dark:text-white dark:focus:ring-green-500 dark:focus:border-green-500"
+        placeholder="Search Product..."
+      />
     </div>
+  </div>
 
+  @if(products){
+  <div
+    class="grid dark:bg-slate-800 dark:text-white sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 xl:grid-cols-5 overflow-hidden gap-5"
+  >
+    @for (prod of products.slice(8) | search : searchWord ; track prod._id) {
+    <div class="card overflow-hidden border border-green-400 rounded-md">
+      <div class="card-image dark:bg-slate-800 dark:text-white">
+        <owl-carousel-o [options]="CardCustomOptions">
+          @for (img of prod.images; track $index) {
 
-    @if(products){
-    <div
-        class=" grid  dark:bg-slate-800 dark:text-white sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 xl:grid-cols-5 overflow-hidden gap-5">
-        @for (prod of products.slice(8) | search : searchWord ; track prod._id) {
-        <div class="card  overflow-hidden border border-green-400 rounded-md  ">
-            <div class="card-image dark:bg-slate-800 dark:text-white">
+          <ng-template carouselSlide>
+            <img
+              [src]="img"
+              class="card-img-top h-[250px] w-full"
+              [alt]="img"
+            />
+          </ng-template>
+          }
+        </owl-carousel-o>
+      </div>
+      <div
+        class="cursor-pointer"
+        (click)="getloginMessage('See Product in Details   ')"
+      >
+        <div class="card-body px-2">
+          <h4 class="text-green-600 py-1 text-center text-sm">
+            {{ prod.category.name }}
+          </h4>
+          <h3 class="card-title font-medium mb-1">
+            {{ prod.title.split(" ", 2).join(" ") }}
+          </h3>
+          <p class="card-text">Brand: {{ prod.brand.name }}</p>
+        </div>
+      </div>
+      <div class="flex justify-between mx-2 items-center">
+        <span class="font-bold">{{ prod.price }} EGP </span>
+      </div>
+      <div class="flex items-center justify-between mx-3 mb-3 relative">
+        @for (data of wishData; track $index) { @if( data._id == prod._id ){
 
+        <i
+          (click)="getloginMessage('Add product in wishlist ')"
+          class="absolute top-0 end-3 z-[21] cursor-pointer text-lg text-red-600 fa-solid fa-heart"
+        ></i>
+        } @if(data._id !== prod._id){
+        <i
+          (click)="getloginMessage('Add product in wishlist ')"
+          class="absolute top-0 end-3 z-20 cursor-pointer text-lg text-red-600 fa-regular fa-heart"
+        ></i>
+        } }
 
-                <owl-carousel-o [options]="CardCustomOptions">
-                    @for (img of prod.images; track $index) {
-
-
-                    <ng-template carouselSlide>
-                        <img [src]="img" class="card-img-top  h-[250px] w-full" [alt]="img">
-
-                    </ng-template>
-                    }
-                </owl-carousel-o>
-
-
-            </div>
-            <div class="cursor-pointer" (click)="getloginMessage('Add See  Product in Details  ') ">
-
-                <div class="card-body  px-2">
-                    <h4 class="text-green-600 py-1 text-center text-sm">{{prod.category.name}}</h4>
-                    <h3 class="card-title font-medium mb-1">{{prod.title.split(" ",2).join(" ")}}</h3>
-                    <p class="card-text ">Brand: {{prod.brand.name}}</p>
-
-
-                </div>
-
-            </div>
-            <div class="flex justify-between mx-2  items-center ">
-                <span class="font-bold">{{ prod.price}} EGP </span>
-
-
-
-
-
-
-            </div>
-            <div class=" flex items-center justify-between mx-3 mb-3 relative ">
-
-                @for (data of wishData; track $index) {
-                @if( data._id == prod._id ){
-
-                <i (click)="getloginMessage('Add product in wishlist ') "
-                    class=" absolute top-0 end-3 z-[21]  cursor-pointer text-lg  text-red-600  fa-solid fa-heart"></i>
-                }
-
-                @if(data._id !== prod._id){
-                <i (click)="getloginMessage('Add product in wishlist ') "
-                    class=" absolute top-0 end-3 z-20  cursor-pointer text-lg  text-red-600  fa-regular fa-heart"></i>
-                }
-                }
-
-
-                <!-- 
+        <!-- 
                 <i appChangerheart (dblclick)="removProductFromWishlist(prod._id)" (click)="(add(prod._id) )"
                     class="cursor-pointer text-lg  text-red-600  fa-regular fa-heart"></i> -->
 
+        <div>
+          @for (star of [1,2,3,4,5].slice(0, prod.ratingsAverage); track $index)
+          {
+          <i class="fa-solid fa-star text-yellow-400"></i>
+          } @if (prod.ratingsAverage % 1 !== 0) {
+          <span><i class="fa-solid fa-star-half text-yellow-400"></i></span>
+          }
 
-
-                <div>
-                    @for (star of [1,2,3,4,5].slice(0, prod.ratingsAverage); track $index) {
-                    <i class=" fa-solid fa-star text-yellow-400"></i>
-                    }
-                    @if (prod.ratingsAverage % 1 !== 0) {
-                    <span><i class="fa-solid fa-star-half text-yellow-400 "></i></span>
-                    }
-
-                    <span class="ms-1 text-gray-500">
-                        ({{prod.ratingsAverage}} )</span>
-                </div>
-            </div>
-            <button (click)="getloginMessage('Add product in cart ') "
-                class="py-2 bg-green-800 text-white block w-[90%] mx-auto rounded">Add
-                To Cart</button>
+          <span class="ms-1 text-gray-500"> ({{ prod.ratingsAverage }} )</span>
         </div>
-        }
-
-    </div>}
+      </div>
+      <button
+        (click)="getloginMessage('Add product in cart ')"
+        class="py-2 bg-green-800 text-white block w-[90%] mx-auto rounded"
+      >
+        Add To Cart
+      </button>
+    </div>
+    }
+  </div>
+  }
 </section>
