--- a/src/app/pages/homelogin/homelogin/homelogin.component.html
+++ b/src/app/pages/homelogin/homelogin/homelogin.component.html
@@ -1,4 +1,4 @@
-<section class="dark:bg-slate-800 px-16 dark:text-white relative">
+<section class="dark:bg-slate-800 max-sm:px-2 px-16 dark:text-white relative">
   <div>
     <app-home-slider></app-home-slider>
 
