--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -26,6 +26,7 @@
         type="email"
         id="email"
         formControlName="email"
+        placeholder="Enter your email"
         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-green-500 focus:border-green-500 block w-full p-2.5 dark:bg-gray-100 dark:border-gray-600 dark:placeholder-gray-600 dark:text-gray-900 dark:focus:ring-green-500 dark:focus:border-green-500"
       />
 
@@ -72,6 +73,7 @@
         type="password"
         id="password"
         formControlName="password"
+        placeholder="Enter your password"
         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-green-500 focus:border-green-500 block w-full p-2.5 dark:bg-gray-100 dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-900 dark:focus:ring-green-500 dark:focus:border-green-500"
       />
 
