--- a/src/app/shared/components/homeSlider/home-slider/home-slider.component.html
+++ b/src/app/shared/components/homeSlider/home-slider/home-slider.component.html
@@ -17,12 +17,12 @@
       }
     </owl-carousel-o>
   </div>
-  <div class="max-lg:flex max-lg:gap-3 lg:w-[20%]">
+  <div class="max-lg:flex max-lg:gap-3 gap-1 lg:w-[20%]">
     <div>
-      <img src="/images/reamadann.avif" class="lg:h-[150px] w-full" alt="" />
+      <img src="/images/reamadann.avif" class="lg:h-[149px] w-full" alt="" />
     </div>
     <div>
-      <img src="/images/ramdnieght.avif" class="lg:h-[150px] w-full" alt="" />
+      <img src="/images/ramdnieght.avif" class="lg:h-[149px] w-full" alt="" />
     </div>
   </div>
 </div>
