--- a/src/app/pages/homelogin/homelogin/homelogin.component.html
+++ b/src/app/pages/homelogin/homelogin/homelogin.component.html
@@ -3,7 +3,7 @@
     <app-home-slider></app-home-slider>
 
     <h1
-      class="text-4xl font-semibold capitalize py-3 text-center text-green-800 font-serif"
+      class="text-4xl dark:text-green-600 font-semibold capitalize py-3 text-center text-green-800 font-serif"
     >
       Main Categories
     </h1>
@@ -29,7 +29,7 @@
   </div>
 
   <h1
-    class="text-4xl dark:bg-slate-800 font-semibold capitalize py-3 text-center text-green-800 font-serif"
+    class="text-4xl dark:bg-slate-800 dark:text-green-600 font-semibold capitalize py-3 text-center text-green-800 font-serif"
   >
     Popular products
   </h1>
@@ -44,7 +44,7 @@
     >
     <div class="relative mb-3 max-sm:w-[90%] md:w-1/2 mx-auto">
       <div
-        class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none"
+        class="absolute inset-y-0 end-5 flex items-center ps-3 pointer-events-none"
       >
         <svg
           class="w-4 h-4 text-green-500 dark:text-green-400"
@@ -65,7 +65,7 @@
       <input
         type="search"
         [(ngModel)]="searchWord"
-        class="w-[100%] p-2 ps-10 text-sm text-green-900 border border-green-300 rounded-lg focus:ring-green-500 focus:border-green-500 dark:bg-green-700 dark:border-green-600 dark:placeholder-green-400 dark:text-white dark:focus:ring-green-500 dark:focus:border-green-500"
+        class="w-[100%] p-2 ps-5 text-sm text-green-900 border border-green-300 rounded-lg focus:ring-green-500 focus:border-green-500 dark:border-green-600 dark:placeholder-green-400 dark:text-white dark:focus:ring-green-500 dark:focus:border-green-500"
         placeholder="Search Product..."
       />
     </div>
@@ -73,10 +73,10 @@
 
   @if(products){
   <div
-    class="grid dark:bg-slate-800 dark:text-white max-sm:grid-cols-2 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 xl:grid-cols-5 overflow-hidden gap-5"
+    class="grid dark:bg-slate-800 dark:text-white max-sm:grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 xl:grid-cols-5 overflow-hidden gap-5"
   >
     @for (prod of products.slice(8) | search : searchWord ; track prod._id) {
-    <div class="card overflow-hidden border border-green-400 rounded-md">
+    <div class="card overflow-hidden mx-3 border border-yellow-500 rounded-md">
       <div class="card-image dark:bg-slate-800 dark:text-white">
         <owl-carousel-o [options]="CardCustomOptions">
           @for (img of prod.images; track $index) {
@@ -134,14 +134,12 @@
           <span><i class="fa-solid fa-star-half text-yellow-400"></i></span>
           }
 
-          <span class="ms-1 text-gray-500 max-sm:hidden">
-            ({{ prod.ratingsAverage }} )</span
-          >
+          <span class="ms-1 text-gray-500"> ({{ prod.ratingsAverage }} )</span>
         </div>
       </div>
       <button
         (click)="getloginMessage('Add product in cart ')"
-        class="py-2 bg-green-800 text-white block w-[90%] mx-auto rounded"
+        class="py-2 bg-orange-600 dark:bg-yellow-400 text-white block w-[90%] mx-auto rounded"
       >
         <i class="fa-solid fa-cart-shopping"></i> Add To Cart
       </button>
