--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -18,6 +18,7 @@
         type="text"
         id="name"
         formControlName="name"
+        placeholder="Enter your name"
         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-green-500 focus:border-green-500 block w-full p-2.5 dark:bg-gray-100 dark:border-gray-600 dark:placeholder-gray-400 dark:focus:ring-green-500 dark:focus:border-green-500"
       />
 
@@ -64,6 +65,7 @@
         type="text"
         id="email"
         formControlName="email"
+        placeholder="Enter your email"
         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-green-500 focus:border-green-500 block w-full p-2.5 dark:bg-gray-100 dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-900 dark:focus:ring-green-500 dark:focus:border-green-500"
       />
       @if( emailControl?.errors && emailControl?.touched){
@@ -108,6 +110,7 @@
         type="password"
         id="password"
         formControlName="password"
+        placeholder="Enter your password"
         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-green-500 focus:border-green-500 block w-full p-2.5 dark:bg-gray-100 dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-900 dark:focus:ring-green-500 dark:focus:border-green-500"
       />
       @if(passwordControl?.errors && passwordControl?.touched){
@@ -151,6 +154,7 @@
       <input
         type="password"
         id="rePassword"
+        placeholder="confirm your password"
         formControlName="rePassword"
         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-green-500 focus:border-green-500 block w-full p-2.5 dark:bg-gray-100 dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-900 dark:focus:ring-green-500 dark:focus:border-green-500"
       />
@@ -200,6 +204,7 @@
         type="tel"
         id="phone"
         formControlName="phone"
+        placeholder="Enter your phone (Egyption)"
         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-green-500 focus:border-green-500 block w-full p-2.5 dark:bg-gray-100 dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-900s dark:focus:ring-green-500 dark:focus:border-green-500"
       />
       @if(phoneControl?.errors &&phoneControl?.touched){
