no thing important

--- a/src/app/Layouts/navbar/navbar.component.html
+++ b/src/app/Layouts/navbar/navbar.component.html
@@ -152,11 +152,7 @@
             ><i class="text-2xl fas fa-cart-shopping"></i>
             <span
               class="absolute text-lg font-medium size-5 flex items-center justify-center top-[-6%] start-[75%] text-green-600 bg-white font-sans rounded-full"
-              >{{
-                cartService.cartCount.getValue()
-                  ? cartService.cartCount.getValue()
-                  : 0
-              }}</span
+              >{{ cartService.cartCount.getValue() }}</span
             >
           </a>
           <span class="max-md:hidden font-serif">Cart</span>
