edit in design of card  specific  in border color and size of heart in section of product

--- a/src/app/Layouts/navbar/navbar.component.html
+++ b/src/app/Layouts/navbar/navbar.component.html
@@ -152,7 +152,7 @@
             />
             <i
               [class.hidden]="isChecked"
-              class="swap-off icon-[tabler--sun] fa-solid fa-sun text-xl"
+              class="swap-off icon-[tabler--sun] text-yellow-500 fa-solid fa-sun text-xl"
             ></i>
             <i
               [class.hidden]="!isChecked"
