--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -84,7 +84,7 @@
             (click)="addProductToWishlist(detailData._id)"
             class="px-4 py-3 w-[45%] border border-red-500 bg-red-600 duration-500 text-white max-sm:text-sm font-semibold"
           >
-            Add to wishlist
+            Add to wishlist <i class="fa-regular text-white fa-heart"></i>
           </button>
           <button
             type="button"
@@ -145,7 +145,7 @@
       </div>
     </div>
     <div class="flex justify-between mx-2 items-center">
-      <span class="font-bold">{{ prod.price }} EGP </span>
+      <span class="font-bold"> Price : {{ prod.price }} EGP </span>
     </div>
     <div class="flex items-center justify-between mx-3 mb-3 relative">
       <div>
