--- a/src/app/pages/homelogin/homelogin/homelogin.component.html
+++ b/src/app/pages/homelogin/homelogin/homelogin.component.html
@@ -65,7 +65,7 @@
       <input
         type="search"
         [(ngModel)]="searchWord"
-        class="w-[100%] p-2 ps-5 text-sm text-green-900 border border-green-300 rounded-lg focus:ring-green-500 focus:border-green-500 dark:border-green-600 dark:placeholder-green-400 dark:text-white dark:focus:ring-green-500 dark:focus:border-green-500"
+        class="w-[100%] p-2 ps-5 text-sm text-green-900 border border-green-300 rounded-lg focus:ring-green-500 focus:border-green-500 dark:border-green-600 dark:placeholder-green-400 dark:focus:ring-green-500 dark:focus:border-green-500"
         placeholder="Search Product..."
       />
     </div>
@@ -73,7 +73,7 @@
 
   @if(products){
   <div
-    class="grid dark:bg-slate-800 dark:text-white max-sm:grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 xl:grid-cols-5 overflow-hidden gap-5"
+    class="grid dark:bg-slate-800 dark:text-white max-sm:grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 xl:grid-cols-5 overflow-hidden gap-3"
   >
     @for (prod of products.slice(8) | search : searchWord ; track prod._id) {
     <div class="card overflow-hidden mx-3 border border-yellow-500 rounded-md">
