--- a/src/app/pages/categories/categories.component.html
+++ b/src/app/pages/categories/categories.component.html
@@ -1,6 +1,6 @@
 <section class="relative">
-  <h1 class="text-4xl text-center my-3 text-green-500 font-medium">
-    Our Categories
+  <h1 class="my-6 capitalize text-4xl font-extrabold text-center">
+    OUR <span class="capitalize text-red-700"> Categories</span>
   </h1>
   <div
     class="grid max-sm:grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4"
