--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -273,9 +273,9 @@
   </div>
 </section>
 <section>
-  <div class="text-green-500 text-4xl text-center capitalize my-3">
-    products
-  </div>
+  <h1 class="my-6 text-4xl font-extrabold text-center">
+    OUR <span class="text-red-700 capitalize">products</span>
+  </h1>
   <div
     class="grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 gap-5"
   >
