--- a/src/app/pages/wishlist/wishlist/wishlist.component.html
+++ b/src/app/pages/wishlist/wishlist/wishlist.component.html
@@ -1,3 +1,6 @@
+<h1 class="my-6 capitalize text-4xl font-extrabold text-center">
+  Wis<span class="capitalize text-red-700">hL</span>ist
+</h1>
 @if(res.count !== 0){ @for( item of wishlistData ;track $index){
 <div
   class="sm:p-5 max-sm:p-1 border-b-2 dark:border-green-600 dark:bg-gray-900 mb- dark:text-white border-black"
