--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -1,5 +1,5 @@
 @if(cartData){
-<section class="mt-5">
+<section class="mt-2">
   <!-- 
         <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
             <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
@@ -84,8 +84,10 @@
             </table>
         </div> -->
   <div class="products-in-cart shadow pb-3 px-2 text-white bg-blue-50">
-    <h1 class="font-serif text-center pt-6 text-4xl text-green-600 font-bold">
-      Shop Cart
+    <h1
+      class="my-6 text-black capitalize text-4xl pt-3 font-extrabold text-center"
+    >
+      Shop<span class="capitalize text-red-700"> Cart</span>
     </h1>
     <h3 class="text-2xl text-center my-2 font-semibold text-red-700">
       <span class="text-gray-900">Total Card Price :</span
