i found error  that products not display ,because  i am have writen line of code that was access brand name but it is not fouded in date that come in this api

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -26,7 +26,7 @@
     </owl-carousel-o>
   </div>
 
-  <h1 class="my-6 capitalize text-4xl font-extrabold text-center">
+  <h1 class="kalam-bold my-6 capitalize text-4xl font-extrabold text-center">
     Popular <span class="capitalize text-red-700">products</span>
   </h1>
   <div
@@ -96,7 +96,6 @@
           <h3 class="card-title font-medium mb-1">
             {{ prod.title.split(" ", 2).join(" ") }}
           </h3>
-          <p class="card-text">Brand: {{ prod.brand.name }}</p>
         </div>
       </div>
       <div class="flex justify-between mx-2 items-center">
