--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,11 +3,14 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap");
+
 .btn-main {
   @apply disabled:bg-gray-500  bg-green-600 border  border-green-700  text-white px-8 py-2 rounded-lg;
 }
 body {
   font-family: "Open Sans", serif;
+  // font-family: "Kalam", cursive;
 }
 
 ::-webkit-scrollbar {
