i found error  that products not display ,because  i am have writen line of code that was access brand name but it is not fouded in data that come in this api because BE change in endpoint data

--- a/src/app/pages/brands/brands.component.html
+++ b/src/app/pages/brands/brands.component.html
@@ -10,9 +10,9 @@
         <div class="cursor-pointer px-3 py-2 border border-black">
           <img [src]="brand.image" class="" [alt]="brand.slug" />
 
-          <!-- <p class="text-center font-serif pt-1 text-green-500">
+          <p class="text-center font-serif pt-1 text-green-500">
             {{ brand.name }}
-          </p> -->
+          </p>
         </div>
       </ng-template>
       }
