--- a/src/app/pages/homelogin/homelogin/homelogin.component.html
+++ b/src/app/pages/homelogin/homelogin/homelogin.component.html
@@ -102,7 +102,7 @@
           <h3 class="card-title font-medium mb-1">
             {{ prod.title.split(" ", 2).join(" ") }}
           </h3>
-          <p class="card-text">Brand: {{ prod.brand.name }}</p>
+          <!-- <p class="card-text">Brand: {{ prod.brand.name }}</p> -->
         </div>
       </div>
       <div class="flex justify-between mx-2 items-center">
